--- a/res/css/share.css
+++ b/res/css/share.css
@@ -10,6 +10,11 @@ body {
   bottom: .5em;
   left: .5em;
 }
+#cmpy-logo {
+  position: absolute;
+  left: 50px;
+  bottom: 0.5em;
+}
 .popover-content {
    min-width: 150px;
 }
@@ -18,11 +23,23 @@ body {
   margin-top: -50px;
 }
 
+/* OL attribution control */
 .ol-attribution li {
   font-size: 1.0rem;
 }
+.ol-attribution a {
+  color: #980606;
+}
 .ol-attribution.ol-uncollapsible {
   height: auto;
+}
+
+/* OL zoom controls */
+.ol-control button {
+    background-color: #980606;
+}
+.ol-control button:hover {
+    background-color: #aa0606;
 }
 
 @media screen and (max-width: 600px) {
